--- a/kie-artifacts/pom.xml
+++ b/kie-artifacts/pom.xml
@@ -16,38 +16,38 @@
   <dependencies>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-wb-distribution-wars</artifactId>
+      <artifactId>kie-wb</artifactId>
       <type>war</type>
       <classifier>wildfly10</classifier>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-wb-distribution-wars</artifactId>
+      <artifactId>kie-wb</artifactId>
       <type>war</type>
       <classifier>tomcat8</classifier>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-wb-distribution-wars</artifactId>
+      <artifactId>kie-wb</artifactId>
       <type>war</type>
       <classifier>eap7</classifier>
     </dependency>
 
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-drools-wb-distribution-wars</artifactId>
+      <artifactId>kie-drools-wb</artifactId>
       <type>war</type>
       <classifier>wildfly10</classifier>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-drools-wb-distribution-wars</artifactId>
+      <artifactId>kie-drools-wb</artifactId>
       <type>war</type>
       <classifier>tomcat8</classifier>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-drools-wb-distribution-wars</artifactId>
+      <artifactId>kie-drools-wb</artifactId>
       <type>war</type>
       <classifier>eap7</classifier>
     </dependency>
