No need to escape Tomcat deployment path

--- a/kie-drools-wb/pom.xml
+++ b/kie-drools-wb/pom.xml
@@ -224,7 +224,7 @@
                   <port>kiedroolswb.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/kie-drools-wb has finished in</log>
+                  <log>Deployment of web application directory /usr/local/tomcat/webapps/kie-drools-wb has finished in</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
