--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -241,7 +241,7 @@
                   <port>kiewb.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/kie-wb has finished in</log>
+                  <log>Deployment of web application directory /usr/local/tomcat/webapps/kie-wb has finished in</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
