--- a/uf-dashbuilder/pom.xml
+++ b/uf-dashbuilder/pom.xml
@@ -178,7 +178,7 @@
                   <port>dashbuilder.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/dashbuilder has finished in</log>
+                  <log>Deployment of web application directory /usr/local/tomcat/webapps/dashbuilder has finished in</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
