--- a/kie-drools-wb/pom.xml
+++ b/kie-drools-wb/pom.xml
@@ -156,7 +156,10 @@
                   <port>kiedroolswb.wf10.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployed "kie-drools-wb\.war"</log>
+                  <http>
+                    <url>http://localhost:${kiedroolswb.wf10.http.port}/kie-drools-wb</url>
+                    <method>GET</method>
+                  </http>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
@@ -189,7 +192,10 @@
                   <port>kiedroolswb.eap64.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployed "kie-drools-wb\.war"</log>
+                  <http>
+                    <url>http://localhost:${kiedroolswb.eap64.http.port}/kie-drools-wb</url>
+                    <method>GET</method>
+                  </http>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
@@ -224,7 +230,10 @@
                   <port>kiedroolswb.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory /usr/local/tomcat/webapps/kie-drools-wb has finished in</log>
+                  <http>
+                    <url>http://localhost:${kiedroolswb.t7.http.port}/kie-drools-wb</url>
+                    <method>GET</method>
+                  </http>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
