--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -176,7 +176,10 @@
                   <port>kiewb.wf10.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployed "kie-wb\.war"</log>
+                  <http>
+                    <url>http://localhost:${kiewb.wf10.http.port}/kie-wb</url>
+                    <method>GET</method>
+                  </http>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
@@ -209,7 +212,10 @@
                   <port>kiewb.eap64.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployed "kie-wb\.war"</log>
+                  <http>
+                    <url>http://localhost:${kiewb.eap64.http.port}/kie-wb</url>
+                    <method>GET</method>
+                  </http>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
@@ -241,7 +247,10 @@
                   <port>kiewb.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory /usr/local/tomcat/webapps/kie-wb has finished in</log>
+                  <http>
+                    <url>http://localhost:${kiewb.t7.http.port}/kie-wb</url>
+                    <method>GET</method>
+                  </http>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
