Use more descriptive log prefix

--- a/kie-drools-wb/pom.xml
+++ b/kie-drools-wb/pom.xml
@@ -163,7 +163,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-drools-wb-wildfly10</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -199,7 +199,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-drools-wb-eap64</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -237,7 +237,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-drools-wb-tomcat7</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
