--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -123,7 +123,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-server-wildfly10</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -159,7 +159,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-server-eap64</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -196,7 +196,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-server-tomcat7</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
