--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -183,7 +183,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-wb-wildfly10</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -219,7 +219,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-wb-eap64</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -254,7 +254,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-wb-tomcat7</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
