--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -143,7 +143,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-wb-wildfly10</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -179,7 +179,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-wb-eap7</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
@@ -216,7 +216,7 @@
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
-                  <prefix>DEMO</prefix>
+                  <prefix>kie-wb-tomcat8</prefix>
                   <date>ISO8601</date>
                   <color>blue</color>
                 </log>
