--- a/kie-drools-wb/pom.xml
+++ b/kie-drools-wb/pom.xml
@@ -109,9 +109,7 @@
         <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
         <configuration>
-          <!-- KIE Images. -->
           <images>
-             <!--Drools Workbench & WildFly 10 -->
             <image>
               <name>${docker.kie.repository}/kie-drools-wb-wildfly10:${docker.build.kie.tag}</name>
               <alias>kie-drools-wb-wildfly10-${docker.build.kie.tag}-h2</alias>
@@ -147,7 +145,6 @@
                 </log>
               </run>
             </image>
-            <!--Drools Workbench & EAP 7-->
             <image>
               <name>${docker.kie.repository}/kie-drools-wb-eap7:${docker.build.kie.tag}</name>
               <alias>kie-drools-wb-eap7-${docker.build.kie.tag}-h2</alias>
@@ -183,7 +180,6 @@
                 </log>
               </run>
             </image>
-            <!-- Drools Workbench & Tomcat 8. -->
             <image>
               <name>${docker.kie.repository}/kie-drools-wb-tomcat8:${docker.build.kie.tag}</name>
               <alias>kie-drools-wb-tomcat8-${docker.build.kie.tag}-h2</alias>
@@ -224,14 +220,14 @@
         </configuration>
         <executions>
           <execution>
-            <id>kiedroolswb-build</id>
+            <id>kie-drools-wb-build</id>
             <phase>pre-integration-test</phase>
             <goals>
               <goal>build</goal>
             </goals>
           </execution>
           <execution>
-            <id>kiedroolswb-start</id>
+            <id>kie-drools-wb-start</id>
             <phase>post-integration-test</phase>
             <goals>
               <goal>start</goal>
