--- a/kie-drools-wb/src/main/docker/wildfly/etc/kie-drools-wb-roles.properties
+++ b/kie-drools-wb/src/main/docker/wildfly/etc/kie-drools-wb-roles.properties
@@ -1,4 +1,4 @@
-admin=admin,analyst,kiemgmt
+wbadmin=admin,analyst,kiemgmt
 krisv=admin,analyst
 john=analyst,Accounting,PM
 mary=analyst,HR
@@ -6,3 +6,4 @@ sales-rep=analyst,sales
 jack=analyst,IT
 katy=analyst,HR
 salaboy=admin,analyst,IT,HR,Accounting
+kieserver=kie-server
