--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -33,6 +33,20 @@
       <classifier>eap7</classifier>
     </dependency>
 
+    <!-- Kie Server -->
+    <dependency>
+      <groupId>org.kie.server</groupId>
+      <artifactId>kie-server</artifactId>
+      <type>war</type>
+      <classifier>ee7</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.kie.server</groupId>
+      <artifactId>kie-server</artifactId>
+      <type>war</type>
+      <classifier>webc</classifier>
+    </dependency>
+
     <!-- Additional dependencies for Tomcat 8 -->
     <dependency>
       <groupId>org.kie</groupId>
@@ -117,7 +131,7 @@
         <configuration>
           <images>
             <image>
-              <name>${docker.kie.repository}/kie-wb-wildfly10:${docker.build.kie.tag}</name>
+              <name>${docker.kie.repository}/kie-wb-kie-server-wildfly10:${docker.build.kie.tag}</name>
               <alias>kie-wb-wildfly10-${docker.build.kie.tag}-h2</alias>
               <build>
                 <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
@@ -152,7 +166,7 @@
               </run>
             </image>
             <image>
-              <name>${docker.kie.repository}/kie-wb-eap7:${docker.build.kie.tag}</name>
+              <name>${docker.kie.repository}/kie-wb-kie-server-eap7:${docker.build.kie.tag}</name>
               <alias>kie-wb-eap7-${docker.build.kie.tag}-h2</alias>
               <build>
                 <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
@@ -187,7 +201,7 @@
               </run>
             </image>
             <image>
-              <name>${docker.kie.repository}/kie-wb-tomcat8:${docker.build.kie.tag}</name>
+              <name>${docker.kie.repository}/kie-wb-kie-server-tomcat8:${docker.build.kie.tag}</name>
               <alias>kie-wb-tomcat8-${docker.build.kie.tag}-h2</alias>
               <build>
                 <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
