--- a/kie-wb/src/main/docker/eap/etc/kie-wb-users.properties
+++ b/kie-wb/src/main/docker/eap/etc/kie-wb-users.properties
@@ -1,4 +1,4 @@
-admin=admin
+wbadmin=wbadmin
 krisv=krisv
 john=john
 mary=mary
@@ -6,3 +6,4 @@ sales-rep=sales-rep
 katy=katy
 jack=jack
 salaboy=salaboy
+kieserver=kieserver1!
