--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.kie</groupId>
     <artifactId>kie-parent</artifactId>
-    <version>7.6.0-SNAPSHOT</version>
+    <version>7.7.0-SNAPSHOT</version>
   </parent>
   <groupId>org.kie.docker</groupId>
   <artifactId>kie-docker-ci-images</artifactId>
@@ -90,7 +90,20 @@
         <classifier>eap-postgres</classifier>
         <type>tar.gz</type>
       </dependency>
-
+      <dependency>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-wb</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+        <classifier>wildfly11</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-drools-wb</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+        <classifier>wildfly11</classifier>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
