adapted for business-central (removed kie-wb and kie-drools-wb)

--- a/business-central/src/main/docker/wildfly/Dockerfile
+++ b/business-central/src/main/docker/wildfly/Dockerfile
@@ -1,8 +1,8 @@
 ####### BASE ############
-FROM jboss/wildfly:11.0.0.Final
+FROM jboss/wildfly:14.0.0.Final
 
 ####### MAINTAINER ############
-MAINTAINER "Roger Martinez" "romartin@redhat.com"
+MAINTAINER "Michael Biarnes Kiefer" "mbiarnes@redhat.com"
 
 ####### LOCALE ############
 ENV LANG en_US.UTF-8
@@ -15,7 +15,7 @@ ENV KIE_CONNECTION_DRIVER h2
 ENV KIE_CONNECTION_USER sa
 ENV KIE_CONNECTION_PASSWORD sa
 ENV KIE_CONNECTION_DATABASE kie
-LABEL org.kie.kie-wb.artifact=org.kie:kie-wb:war:wildfly14
+LABEL org.kie.business-central.artifact=org.kie:business-central:war:wildfly14
 
 ####### SYTEM USERS FOR DEVELOPMENT ############
 USER root
@@ -23,24 +23,21 @@ USER root
 RUN echo "root:rootman" | chpasswd && \
 echo "jboss:jboss" | chpasswd
 
-####### KIE-WB & WILDFLY 14 CONFIG FILES ############
+####### BUSINESS_CENTRAL & WILDFLY14 CONFIG FILES ############
 # Latest WAR from Maven repository & Custom WildFly configuration files
 # There is an issue in Docker with ADD command.
 # When a file is added into the container's filesystem, the file owner is always root, instead of the current running user.
 # See https://github.com/docker/docker/issues/5110
 # The workaround is doing a chown using root user and then switchback to jboss user.
-
 # WildFly custom configuration.
-ADD etc/kie-wb-users.properties $JBOSS_HOME/standalone/configuration/kie-wb-users.properties
-ADD etc/kie-wb-roles.properties $JBOSS_HOME/standalone/configuration/kie-wb-roles.properties
-ADD etc/standalone-full-kie-wb.xml $JBOSS_HOME/standalone/configuration/standalone-full-kie-wb.xml
-
-# Custom kie-wb WildFly startup scripts.
-ADD etc/start_kie-wb.sh $JBOSS_HOME/bin/start_kie-wb.sh
+ADD etc/business-central-users.properties $JBOSS_HOME/standalone/configuration/business-central-users.properties
+ADD etc/business-central-roles.properties $JBOSS_HOME/standalone/configuration/business-central-roles.properties
+ADD etc/standalone-full-business-central.xml $JBOSS_HOME/standalone/configuration/standalone-full-business-central.xml
+# Custom business-central WildFly startup scripts.
+ADD etc/start_business-central.sh $JBOSS_HOME/bin/start_business-central.sh
 ADD etc/update-jpa-config.sh $JBOSS_HOME/bin/update-jpa-config.sh
-
-# Add the kie-wb WAR artifact from the assembly result.
-ADD maven/kie-wb.war $JBOSS_HOME/standalone/deployments/kie-wb-archive.war
+# Add the business-central WAR artifact from the assembly result.
+ADD maven/business-central.war $JBOSS_HOME/standalone/deployments/business-central-archive.war
 
 # Add the kie-server WAR artifact from the assembly result.
 ADD maven/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war
@@ -50,9 +47,9 @@ ADD maven/modules/kie-wildfly-mysql-module.tar.gz $JBOSS_HOME/modules/system/lay
 ADD maven/modules/kie-wildfly-postgres-module.tar.gz $JBOSS_HOME/modules/system/layers/base
 
 # Work with unpacked WAR archives in WildFly, so other images can override webapp files (such as persistence.xml,etc)
-RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-wb.war $JBOSS_HOME/standalone/deployments/kie-wb-archive.war && \
-touch $JBOSS_HOME/standalone/deployments/kie-wb.war.dodeploy && \
-rm -rf $JBOSS_HOME/standalone/deployments/kie-wb-archive.war
+RUN unzip -q -d $JBOSS_HOME/standalone/deployments/business-central.war $JBOSS_HOME/standalone/deployments/business-central-archive.war && \
+touch $JBOSS_HOME/standalone/deployments/business-central.war.dodeploy && \
+rm -rf $JBOSS_HOME/standalone/deployments/business-central-archive.war
 RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war && \
 touch $JBOSS_HOME/standalone/deployments/kie-server.war.dodeploy && \
 rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war
@@ -60,19 +57,18 @@ rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war
 # Set right permissions for jboss user.
 RUN chown -R jboss:jboss $JBOSS_HOME/standalone/deployments/* && \
 chmod +x $JBOSS_HOME/bin/*.sh && \
-chown jboss:jboss $JBOSS_HOME/bin/start_kie-wb.sh && \
+chown jboss:jboss $JBOSS_HOME/bin/start_business-central.sh && \
 chown jboss:jboss $JBOSS_HOME/bin/update-jpa-config.sh && \
-chown jboss:jboss $JBOSS_HOME/standalone/configuration/kie-wb-users.properties && \ 
-chown jboss:jboss $JBOSS_HOME/standalone/configuration/kie-wb-roles.properties && \
-chown jboss:jboss $JBOSS_HOME/standalone/configuration/standalone-full-kie-wb.xml && \
+chown jboss:jboss $JBOSS_HOME/standalone/configuration/business-central-users.properties && \
+chown jboss:jboss $JBOSS_HOME/standalone/configuration/business-central-roles.properties && \
+chown jboss:jboss $JBOSS_HOME/standalone/configuration/standalone-full-business-central.xml && \
 chown -R jboss:jboss $JBOSS_HOME/modules/system/layers/base/*
-
 # Switchback to jboss user
 USER jboss
 
-####### EXPOSE INTERNAL KIE-WB GIT PORT ############
+####### EXPOSE INTERNAL BUSINESS_CENTRAL GIT PORT ############
 EXPOSE 8001
 
 ####### COMMAND ############
 WORKDIR $JBOSS_HOME/bin/
-CMD ["./start_kie-wb.sh"]
+CMD ["./start_business-central.sh"]
