--- a/kie-artifacts/pom.xml
+++ b/kie-artifacts/pom.xml
@@ -16,30 +16,16 @@
   <dependencies>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-wb</artifactId>
+      <artifactId>business-central</artifactId>
       <type>war</type>
       <classifier>wildfly14</classifier>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-wb</artifactId>
+      <artifactId>business-central</artifactId>
       <type>war</type>
       <classifier>eap7</classifier>
     </dependency>
-
-    <dependency>
-      <groupId>org.kie</groupId>
-      <artifactId>kie-drools-wb</artifactId>
-      <type>war</type>
-      <classifier>wildfly14</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.kie</groupId>
-      <artifactId>kie-drools-wb</artifactId>
-      <type>war</type>
-      <classifier>eap7</classifier>
-    </dependency>
-
 
     <dependency>
       <groupId>org.kie.server</groupId>
