--- a/business-central/src/main/docker/eap/Dockerfile
+++ b/business-central/src/main/docker/eap/Dockerfile
@@ -15,7 +15,7 @@ ENV KIE_CONNECTION_DRIVER h2
 ENV KIE_CONNECTION_USER sa
 ENV KIE_CONNECTION_PASSWORD sa
 ENV KIE_CONNECTION_DATABASE kie
-LABEL org.kie.kie-drools-wb.artifact=org.kie:kie-drools-wb:war:eap7
+LABEL org.kie.business-central.artifact=org.kie:business-central:war:eap7
 
 ####### SYTEM USERS FOR DEVELOPMENT ############
 USER root
@@ -23,21 +23,21 @@ USER root
 RUN echo "root:rootman" | chpasswd && \
 echo "jboss:jboss" | chpasswd
 
-####### KIE-DROOLS-WB & EAP7 CONFIG FILES ############
+####### BUSINESS_CENTRAL & EAP7 CONFIG FILES ############
 # Latest WAR from Red Hat internal repository & Custom EAP 7 configuration files
 # There is an issue in Docker with ADD command.
 # When a file is added into the container's filesystem, the file owner is always root, instead of the current running user.
 # See https://github.com/docker/docker/issues/5110
 # The workaround is doing a chown using root user and then switchback to jboss user.
 # WildFly custom configuration.
-ADD etc/kie-drools-wb-users.properties $JBOSS_HOME/standalone/configuration/kie-drools-wb-users.properties
-ADD etc/kie-drools-wb-roles.properties $JBOSS_HOME/standalone/configuration/kie-drools-wb-roles.properties
-ADD etc/standalone-full-kie-drools-wb.xml $JBOSS_HOME/standalone/configuration/standalone-full-kie-drools-wb.xml
-# Custom kie-drools-wb EAP startup scripts.
-ADD etc/start_kie-drools-wb.sh $JBOSS_HOME/bin/start_kie-drools-wb.sh
+ADD etc/business-central-users.properties $JBOSS_HOME/standalone/configuration/business-central-users.properties
+ADD etc/business-central-roles.properties $JBOSS_HOME/standalone/configuration/business-central-roles.properties
+ADD etc/standalone-full-business-central.xml $JBOSS_HOME/standalone/configuration/standalone-full-business-central.xml
+# Custom business-central EAP startup scripts.
+ADD etc/start_business-central.sh $JBOSS_HOME/bin/start_business-central.sh
 ADD etc/update-jpa-config.sh $JBOSS_HOME/bin/update-jpa-config.sh
-# Add the kie-drools-wb WAR artifact from the assembly result.
-ADD maven/kie-drools-wb.war $JBOSS_HOME/standalone/deployments/kie-drools-wb-archive.war
+# Add the business-central WAR artifact from the assembly result.
+ADD maven/business-central.war $JBOSS_HOME/standalone/deployments/business-central-archive.war
 
 # Add the kie-server WAR artifact from the assembly result.
 ADD maven/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war
@@ -47,9 +47,9 @@ ADD maven/modules/kie-eap-mysql-module.tar.gz $JBOSS_HOME/modules/system/layers/
 ADD maven/modules/kie-eap-postgres-module.tar.gz $JBOSS_HOME/modules/system/layers/base
 
 # Work with unpacked WAR archives in EAP, so other images can override webapp files (such as persistence.xml,etc)
-RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-drools-wb.war $JBOSS_HOME/standalone/deployments/kie-drools-wb-archive.war && \
-touch $JBOSS_HOME/standalone/deployments/kie-drools-wb.war.dodeploy && \
-rm -rf $JBOSS_HOME/standalone/deployments/kie-drools-wb-archive.war
+RUN unzip -q -d $JBOSS_HOME/standalone/deployments/business-central.war $JBOSS_HOME/standalone/deployments/business-central-archive.war && \
+touch $JBOSS_HOME/standalone/deployments/business-central.war.dodeploy && \
+rm -rf $JBOSS_HOME/standalone/deployments/business-central-archive.war
 RUN unzip -q -d $JBOSS_HOME/standalone/deployments/kie-server.war $JBOSS_HOME/standalone/deployments/kie-server-archive.war && \
 touch $JBOSS_HOME/standalone/deployments/kie-server.war.dodeploy && \
 rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war
@@ -57,18 +57,18 @@ rm -rf $JBOSS_HOME/standalone/deployments/kie-server-archive.war
 # Set right permissions for jboss user.
 RUN chown -R jboss:jboss $JBOSS_HOME/standalone/deployments/* && \
 chmod +x $JBOSS_HOME/bin/*.sh && \
-chown jboss:jboss $JBOSS_HOME/bin/start_kie-drools-wb.sh && \
+chown jboss:jboss $JBOSS_HOME/bin/start_business-central.sh && \
 chown jboss:jboss $JBOSS_HOME/bin/update-jpa-config.sh && \
-chown jboss:jboss $JBOSS_HOME/standalone/configuration/kie-drools-wb-users.properties && \ 
-chown jboss:jboss $JBOSS_HOME/standalone/configuration/kie-drools-wb-roles.properties && \
-chown jboss:jboss $JBOSS_HOME/standalone/configuration/standalone-full-kie-drools-wb.xml && \
+chown jboss:jboss $JBOSS_HOME/standalone/configuration/business-central-users.properties && \
+chown jboss:jboss $JBOSS_HOME/standalone/configuration/business-central-roles.properties && \
+chown jboss:jboss $JBOSS_HOME/standalone/configuration/standalone-full-business-central.xml && \
 chown -R jboss:jboss $JBOSS_HOME/modules/system/layers/base/*
 # Switchback to jboss user
 USER jboss
 
-####### EXPOSE INTERNAL KIE-DROOLS-WB GIT PORT ############
+####### EXPOSE INTERNAL business-central GIT PORT ############
 EXPOSE 8001
 
 ####### COMMAND ############
 WORKDIR $JBOSS_HOME/bin/
-CMD ["./start_kie-drools-wb.sh"]
+CMD ["./start_business-central.sh"]
